<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="dialog_button_ok">OK</string>

  <string name="error_title_general">Entschuldigung</string>
  <string name="error_message_general">Es ist ein unerwarteter Fehler aufgetreten.</string>
  <string name="error_title_connection">Verbindungsfehler</string>
  <string name="error_message_connection">Bei der Verbindung zum Server ist ein Fehler aufgetreten.\nBitte überprüfen Sie Ihre Internetverbindung.</string>

  <string name="onboarding_welcome_start_button_text">Los geht\'s</string>
  <string name="onboarding_consent_terms_condition">Ich akzeptiere die <a href="https://www.coronawarn.app/assets/documents/cwa-privacy-notice-de.pdf">AGB</a>.</string>
  <string name="onboarding_consent_data_protection">Ich habe die <a href="https://www.coronawarn.app/assets/documents/cwa-privacy-notice-de.pdf">Datenschutzerklärung</a> zur Kenntnis genommen.</string>

  <string name="covid_header">COVID-19-Impfung</string>

  <string name="loading_text">Impfung wird hinzugefügt</string>

  <string name="information_header">Informationen</string>
  <string name="information_app_version_label_text">App Version %1$s</string>
  <string name="information_faq_link"><a href="https://www.coronawarn.app/de/faq/">Häufige Fragen</a></string>
  <string name="information_terms_and_conditions_link"><a href="https://www.coronawarn.app/assets/documents/cwa-eula-de.pdf">Allgemeine Geschäftsbedingungen</a></string>
  <string name="information_data_security_policy_link"><a href="https://www.coronawarn.app/assets/documents/cwa-privacy-notice-de.pdf">Datenschutzerklärung</a></string>
  <string name="information_imprint_link"><a href="https://www.coronawarn.app/de/imprint/">Impressum</a></string>
  <string name="information_open_source_licenses_link">Open Source Lizenzen</string>
  <string name="information_information_subtitle">Alle rechtlichen Informationen zur elektronischen Gesundheitsakte im Überblick:</string>
  <string name="open_source_license_header">Open Source Lizenzen</string>
</resources>
