<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundPrimary"
  android:orientation="vertical"
  tools:ignore="Overdraw">

  <com.ibm.health.common.vaccination.app.uielements.CenteredTitleToolbar
    android:id="@+id/information_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundPrimary"
    android:elevation="@dimen/elevation"
    android:gravity="center_vertical"
    android:minHeight="@dimen/grid_seven"
    android:paddingStart="@dimen/grid_one"
    android:paddingEnd="@dimen/grid_one"
    android:theme="@style/VaccinationAppTheme.DarkControlHighlight"
    app:popupTheme="@style/VaccinationAppTheme.DarkControlHighlight" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        style="@style/DefaultText.OnBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/grid_three"
        android:text="@string/information_information_subtitle" />

      <TextView
        android:id="@+id/information_field_faq"
        style="@style/NavigationField"
        android:text="@string/information_faq_link" />

      <View style="@style/Divider" />

      <TextView
        android:id="@+id/information_field_terms_and_conditions"
        style="@style/NavigationField"
        android:text="@string/information_terms_and_conditions_link" />

      <View style="@style/Divider" />

      <TextView
        android:id="@+id/information_field_data_security_policy"
        style="@style/NavigationField"
        android:text="@string/information_data_security_policy_link" />

      <View style="@style/Divider" />

      <TextView
        android:id="@+id/information_field_imprint"
        style="@style/NavigationField"
        android:text="@string/information_imprint_link" />

      <View style="@style/Divider" />

      <TextView
        android:id="@+id/information_field_open_source_licenses"
        style="@style/NavigationField"
        android:text="@string/information_open_source_licenses_link" />

      <View style="@style/Divider" />

      <TextView
        android:id="@+id/information_app_version_label"
        style="DefaultText.OnBackground70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="@dimen/grid_one_half" />

    </LinearLayout>

  </ScrollView>

</LinearLayout>
